--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <p> E-mail Address: wangjiachenlisa@gmail.com </p>
 
-<h1> WANG Jiachen, Lisa 王嘉琛 </h1>
+<h1> WANG Jiachen, Lisa </h1>
 
 <h2> Education: </h2>
 
