--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
-<p> Contact Number: (852) 6614 1592 </p>
+<h1> CV </h1>
 
-<p> E-mail Address: wangjiachenlisa@gmail.com </p>
+<p style="background-color:lightgrey;color: blue;">
+Wang Jiachen
+</p>
 
-<h1> WANG Jiachen, Lisa </h1>
+<h3> Contact Number: (852) 6614 1592 </h3>
 
-<h2> Education: </h2>
+<h3> E-mail Address: wangjiachenlisa@gmail.com </h3>
 
-<p> Hong Kong Baptist University Bachelor of Social Science (Honors) in Communication     2015-present </p>
+<h2> Education </h2>
 
-<h3> Journalistic Experience </h3>
+<p> Hong Kong Baptist University Bachelor of Social Science (Honors) in Communication </p>
 
-<p> Journalist of The Young Financial Post (HKBU)     2016-present </p>
+<h2> Journalistic Experience </h2>
 
-<h4> Additional Information </h4>
+<p> Journalist of The Young Financial Post (HKBU) </p>
+
+<h2> Additional Information </h2>
 
 <p> Languages: Mandarin (Native), English (Good), and Cantonese (Basic) </p>
 
