--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <h1> CV </h1>
 
-<p style="background-color:lightgrey;color: blue;">
-Wang Jiachen
-</p>
+<h1>
+    <p style="background-color:lightgrey;color: blue;">
+        Wang Jiachen
+    </p>
+</h1>
+<ul>
+    <li>
+        <h3> <i> Contact Number: </i> (852) 6614 1592 </h3>
+    </li>
 
-<h3> Contact Number: (852) 6614 1592 </h3>
-
-<h3> E-mail Address: wangjiachenlisa@gmail.com </h3>
-
+    <li>
+        <h3> <i>E-mail Address: </i> wangjiachenlisa@gmail.com </h3>
+    </li>
+</ul>
 <h2> Education </h2>
 
 <p> Hong Kong Baptist University Bachelor of Social Science (Honors) in Communication </p>
@@ -18,9 +24,8 @@ Wang Jiachen
 
 <h2> Additional Information </h2>
 
-<p> Languages: Mandarin (Native), English (Good), and Cantonese (Basic) </p>
+<ol>
+    <li> Languages: Mandarin (Native), English (Good), and Cantonese (Basic) </li>
 
-<p> Business courses taken: Economics, Finance and Investment </p>
-
-
-
+    <li> Business courses taken: Economics, Finance and Investment </li>
+</ol>
