--- a/LisaWang.html
+++ b/LisaWang.html
@@ -1,3 +1,73 @@
+<h1> CV </h1>
+
+
+
+<h1>
+
+    <p style="background-color:lightgrey;color: blue;">
+
+        Wang Jiachen
+
+    </p>
+
+</h1>
+
+<ul>
+
+    <li>
+
+        <h3> <i> Contact Number: </i> (852) 6614 1592 </h3>
+
+    </li>
+
+
+
+    <li>
+
+        <h3> <i>E-mail Address: </i> wangjiachenlisa@gmail.com </h3>
+
+    </li>
+
+</ul>
+
+<h2> Education </h2>
+
+
+
+<p> Hong Kong Baptist University Bachelor of Social Science (Honors) in Communication </p>
+
+
+
+<h2> Journalistic Experience </h2>
+
+
+
+<p> Journalist of The Young Financial Post (HKBU) </p>
+
+
+
+<h2> Additional Information </h2>
+
+
+
+<ol>
+
+    <li> Languages: Mandarin (Native), English (Good), and Cantonese (Basic) </li>
+
+
+
+    <li> Business courses taken: Economics, Finance and Investment </li>
+
+</ol>
+
+
+
+
+
+
+
+
+
 <head>
 
 <h1>
