--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
-<head>
+        <body>
+   <style=background-color:Pale Dogwood>
+            
+    </style>
+      
+    <div>
+        <img src="446439433946796440.jpg " style="width: 100%;height:auto">
+        <div class="text-block">
+            <h1>
+  <p style="text-align:center;font-size:36px;color:Hazelnut">
 
-<h1>
-
-  <p style="text-align:center;background-color:lightgrey;color: blue">
-
-   WANG Jiachen, Lisa 王嘉琛
-
+ WANG Jiachen, Lisa
   </p>
 
 </h1>
 
-
+ </div>
 
 <ul>
 
@@ -28,11 +32,11 @@
 
 </ul>
 
-</head>
 
 
 
-<body style="background-image:url('Blank_map_world_rivers.png')">
+<body>
+  <style="background-image:url('Blank_map_world_rivers.png')">
 
  
 
