--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
         <body>
-   <style=background-color:Pale Dogwood>
+   <style=background-color:light blue>
             
     </style>
       
@@ -7,7 +7,7 @@
         <img src="446439433946796440.jpg " style="width: 100%;height:auto">
         <div class="text-block">
             <h1>
-  <p style="text-align:center;font-size:36px;color:Hazelnut">
+  <p style="text-align:center;font-size:36px;color:black">
 
  WANG Jiachen, Lisa
   </p>
