--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h2 style="text-align:center;color:#476268"> <b>Education </b></h2>
-                        <p> Hong Kong Baptist University Bachelor of Social Science (Honors) in Communication&emsp; |&emsp; (2015-present)
+                        <p> &emsp;&emsp;&emsp;&emsp;Hong Kong Baptist University Bachelor of Social Science (Honors) in Communication&emsp; |&emsp; (2015-present)
                         </p>
                     </div>
                     <div class="col-md-6">
@@ -84,24 +84,24 @@
 <!--
 #DIV_A{
     display:inline-block;
-    width:380px;
-    height:280px;
+    width:350px;
+    height:250px;
     border:0px ;
     margin-right:10px;
     margin-bottom:15px;
 }
 #DIV_B{
     display:inline-block;
-    width:380px;
-    height:280px;
+    width:350px;
+    height:250px;
     border:0px;
     margin-right:10px;
     margin-bottom:15px;
 }
 #DIV_C{
     display:inline-block;
-    width:380px;
-    height:280px;
+    width:350px;
+    height:250px;
     border:0px;
     margin-right:10px;
     margin-bottom:15px;
@@ -109,31 +109,31 @@
 -->
 </style>
 <div id="DIV_A">
-   <img src="IMG_7671.JPG" width="380" height="280">
+   <img src="IMG_7671.JPG" width="350" height="250">
 </div>
 <div id="DIV_A">
-<img src="IMG_7590.JPG"  width="380" height="280">
+<img src="IMG_7590.JPG"  width="350" height="250">
 </div>
 <div id="DIV_A">
-<img src= "IMG_7503.JPG"  width="380" height="280">
+<img src= "IMG_7503.JPG"  width="350" height="250">
 </div>
 <div id="DIV_B">
-<img src="IMG_7731.JPG" width="380" height="280">
+<img src="IMG_7731.JPG" width="350" height="250">
 </div>
 <div id="DIV_B">
-<img src="IMG_20170702_124047_1.jpg"  width="380" height="280">
+<img src="IMG_20170702_124047_1.jpg"  width="350" height="250">
 </div>
 <div id="DIV_B">
-<img src="IMG_6205.JPG"  width="380" height="280">
+<img src="IMG_6205.JPG"  width="350" height="250">
 </div>
 <div id="DIV_C">
-<img src="IMG_6516.JPG"  width="380" height="280">
+<img src="IMG_6516.JPG"  width="350" height="250">
 </div>
 <div id="DIV_C">
-<img src= "IMG_6453.JPG" width="380" height="280">
+<img src= "IMG_6453.JPG" width="350" height="250">
 </div>
 <div id="DIV_C">
-<img src="IMG_7112.JPG"  width="380" height="280">
+<img src="IMG_7112.JPG"  width="350" height="250">
 </div>
 
         <footer>
