--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h2 style="text-align:center;color:#476268"> <b>Education </b></h2>
-                        <p> &emsp;&emsp;&emsp;&emsp;Hong Kong Baptist University Bachelor of Social Science (Honors) in Communication&emsp; |&emsp; (2015-present)
+                        <p> &emsp;Hong Kong Baptist University Bachelor of Social Science (Honors) in Communication&emsp; |&emsp; (2015-present)
                         </p>
                     </div>
                     <div class="col-md-6">
@@ -144,5 +144,6 @@
                 math.sin('math.PI/2')
             </script>
         </footer>
+
     </p>
 </div>
