--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                 </div>
             </div>
         </body>
-        <h2 style="text-align:center;color:#476268"> <b>Photo Wall</b> </h2>
+      <h2 style="text-align:center;color:#476268"> <b>Photo Wall</b> </style>
+      </h2>
       <style type="text/css">
 <!--
 #DIV_A{
@@ -135,7 +136,6 @@
 <div id="DIV_C">
 <img src="IMG_7112.JPG"  width="350" height="250">
 </div>
-
         <footer>
             <p style="text-align:center;color:#74B49B">@ Lisa wang
             </p>
