--- a/index.html
+++ b/index.html
@@ -136,10 +136,8 @@
 <div id="DIV_C">
 <img src="IMG_7112.JPG"  width="350" height="250">
 </div>
-
-        <footer>
-            <p style="text-align:center;color:#74B49B">@ Lisa wang
-            </p>
+<footer>
+ <p style="text-align:center;color:#74B49B">@ Lisa wang </p>
             <script>
                 console.log('3x5')
                 math.sin('math.PI/2')
