--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h2 style="text-align:center;color:#476268"> <b>Education </b></h2>
+                          experience=[{'title':'Hong Kong Baptist University Bachelor of Social Science (Honors) in Communication',
+                          'date':'(2015-present)','location':'Hong Kong'}]
+                      
                         <p> &emsp;Hong Kong Baptist University Bachelor of Social Science (Honors) in Communication&emsp; |&emsp; (2015-present)
                         </p>
                     </div>
