--- a/homework7/index.html
+++ b/homework7/index.html
@@ -18,7 +18,7 @@
 <head>
     <meta charset="utf-8">
 
-    <img src="DNS-Budget2018.jpg" style="width:auto;height:450px;align=middle">
+    <div style="text-align:center"><img src="DNS-Budget2018.jpg" style="width:auto;height:450px"></div>
      <p style="text-align:center;color:#476268;font-size:48px">
      The HK Budget in 2018
      </p>
