--- a/homework7/index.html
+++ b/homework7/index.html
@@ -17,8 +17,23 @@
 
 <head>
     <meta charset="utf-8">
-
-    <div style="text-align:center"><img src="DNS-Budget2018.jpg" style="width:auto;height:450px"></div>
+    
+<div class="img">
+	<span class="icenter"><img src="DNS-Budget2018.jpg"></span>
+</div>
+.img .icenter {
+	display:table-cell;
+	vertical-align:middle;
+	text-align:center;
+	height:450px;
+	width:auto
+}
+.img {
+	vertical-align:middle;
+	display:inline-block
+}
+    
+  
      <p style="text-align:center;color:#476268;font-size:48px">
      The HK Budget in 2018
      </p>
