--- a/homework7/index.html
+++ b/homework7/index.html
@@ -47,12 +47,12 @@
     
     </h2>
 
-
+	<div id="1"></div>
     <script>
     var width = 400;
     var height = 400;
    
-    var svg = d3.select("body")
+    var svg = d3.select("1")
         .append("svg")
         .attr("width", width)
         .attr("height", height);
@@ -147,6 +147,8 @@ Total government revenue for 2018-19 is estimated to be $604.5 billion, of which
    <h3 >
    The Government Revenue in 2018-2019
    </h3>
+	
+	<div id="2"></div>
    <script>
         var dataset = [25.7, 22.1, 6.6, 20, 9.1, 16.5];
 
@@ -162,7 +164,7 @@ Total government revenue for 2018-19 is estimated to be $604.5 billion, of which
             .outerRadius(outerRadius)
             .innerRadius(innerRadius);
 
-        var svg = d3.select("body")
+        var svg = d3.select("2")
             .append("svg")
             .attr("width", w)
             .attr("height", h);
@@ -213,6 +215,8 @@ Total government revenue for 2018-19 is estimated to be $604.5 billion, of which
 <h3 >
    The Government Expenditure in 2018-2019
    </h3>
+	
+	<div id="3"></div>
     <script>
         var dataset = [20.4, 16.5, 15.6, 15.3, 9.6, 4.8, 14, 3.8];
 
@@ -229,7 +233,7 @@ Total government revenue for 2018-19 is estimated to be $604.5 billion, of which
             .outerRadius(outerRadius)
             .innerRadius(innerRadius);
 
-        var svg = d3.select("body")
+        var svg = d3.select("3")
             .append("svg")
             .attr("width", w)
             .attr("height", h);
