--- a/homework7/index.html
+++ b/homework7/index.html
@@ -17,22 +17,25 @@
 
 <head>
     <meta charset="utf-8">
-    
-<div class="img">
-	<span class="icenter"><img src="DNS-Budget2018.jpg"></span>
-
-.img .icenter {
-	display:table-cell;
-	vertical-align:middle;
-	text-align:center;
-	height:450px;
-	width:auto
-}
+	
+    <div class="img img">
+	<img src="DNS-Budget2018.jpg">
+	<i class="iblock"></i>
+</div>
 .img {
-	vertical-align:middle;
-	display:inline-block
+	text-align:center
 }
-    </div>
+.img img {
+	vertical-align:middle
+}
+.img .iblock {
+	display:inline-block;
+	height:100%;
+	width:auto;
+	vertical-align:middle
+}
+
+
   
      <p style="text-align:center;color:#476268;font-size:48px">
      The HK Budget in 2018
