--- a/homework7/index.html
+++ b/homework7/index.html
@@ -19,21 +19,10 @@
     <meta charset="utf-8">
 	
     <div class="img img">
-	<img src="DNS-Budget2018.jpg">
+	<img src="DNS-Budget2018.jpg" height:100% width:auto>
 	<i class="iblock"></i>
 </div>
-.img {
-	text-align:center
-}
-.img img {
-	vertical-align:middle
-}
-.img .iblock {
-	display:inline-block;
-	height:100%;
-	width:auto;
-	vertical-align:middle
-}
+
 
 
   
